# github-ai-assistant-redux

./: .gitignore  Dockerfile  README.md  build.gradle.kts  docker-compose.yml  settings.gradle.kts
.github/workflows/: build-image.yml  ci-main.yml  deploy.yml
codeChangeProcessor/: README.md  build.gradle.kts
codeChangeProcessor/src/main/resources/: application.yml
conversationProcessor/: build.gradle.kts
conversationProcessor/src/main/resources/: application-prod.yml
conversationProcessor/src/main/resources/templates/: error.html
shared/: build.gradle.kts
shared/avro/: webhook_payload.avsc
shared/src/main/resources/avro/: pull_request_data.avsc  webhook_payload.avsc
src/main/resources/: application-oauth-test.yml  application-prod.yml  application-test.yml  application.yml  seed_fake_conversation.sql
src/main/resources/db/migration/: V0__initial_migration.sql  V1__conversations_table.sql  V2__conversation_status.sql
src/main/resources/static/css/: conversation.css  main.css  manual_structurizr_form.css
src/main/resources/templates/: error.html
src/main/resources/templates/admin/: conversation.html  index.html
src/main/resources/templates/error/: 403.html
src/test/resources/: application-test.yml
src/test/resources/mockRepo/: README.md
src/test/resources/structurizr/: weather-app.dsl
src/test/resources/wiremock/: create-comment-output.json  get-repo-output.json
src/test/resources/wiremock/github-api/: get-repo-tree-output.json
webhookHandler/: Cargo.toml  Dockerfile  README.md
webhookHandler/src/: auth.rs  data.rs  main.rs
(+176 files in other folders)
